--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@ html body{
   font-family: Arial, Helvetica, sans-serif;
   line-height:1.2rem;
   background: #f1f1f1;
+  box-sizing: border-box;
 }
 
 ul,li{ 
