--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,8 @@ html body{
   line-height:1.2rem;
   background: #f1f1f1;
   box-sizing: border-box;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
 
 ul,li{ 
